sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: j is already defined as variable j
    var j = 0;
        ^